# femda

./: .gitignore  Overview  README.md  TODO.txt  _fem.py  clustering_accuracy.py  dataset_utils.py  demo.ipynb  experiment_FEM.ipynb  experiment_LDA.ipynb  experiments_MTSC.ipynb  experiments_breizhcrops.ipynb  experiments_data_vis.ipynb  experiments_imports.py  experiments_utils.py  fem.py  fit.py  import_subset_datasets.py  models.py  postprocess_utils.py  preprocess_utils.py  requirements.txt  setup.cfg  test.py  vis.py
femda/: __init__.py  _algo_utils.py  _fem.py  _literature_models.py  _models_femda.py  _models_gqda.py  _models_lda.py  _models_t_lda.py  femda_.py  test.py
femda/experiments/: MODIFICATIONS.txt  __init__.py  decision_rules.py  decision_rules_comparison_real_data.py  decision_rules_comparison_simulated_data.py  estimateurs.py  labo_test.py  paths.config  preprocessing.py  run_experiments.py  simulateur.py
python/: experiments.ipynb  experiments_MTSC.ipynb  experiments_breizhcrops.ipynb  femda.py  fit.py  literature_models.py  postprocess_utils.py  preprocess_utils.py  run_experiments.py  vis.py
src/: literature_models.py  postprocess_utils.py
