[metadata]
name = femda
version = 0.0.2
author = Andrew Wang
author_email = andrew.wang27@gmail.com
description = Implementation of FEMDA: Flexible EM-Inspired Discriminant Analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Andrewwango/femda
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
